# pyReCo

./: .coveragerc  .gitignore  .readthedocs.yaml  AUTHORS.rst  LICENSE.txt  PROJECT_STRUCTURE.md  README.md  README.rst  TODO.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docu_deploy.yml
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pyreco.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyreco.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
examples/: compare_tensorflow_recopy.py  effects_network_initialization.py  effects_network_structure.py  mwe_custom_model_api.py  mwe_model_api.py  sine_pred_test.py  testing_ar_predict.py  testing_custom_models.py  testing_deleting_nodes.py  testing_models.py  testing_pruning_models.py  testing_scalar_to_scalar.py  testing_sequence_to_scalar.py
src/: pruning.py
src/pyreco/: custom_models.py  initializer.py  layers.py  models.py  node_selector.py  optimizers.py  pruning.py  remove_transients.py  skeleton.py  utils_data.py  utils_networks.py
src/pyreco/analysis/: graph_analyzer.py  node_analyzer.py
src/pyreco/core/: custom_models.py  layers.py  network_prop_extractor.py  pruning.py
src/pyreco/reservoir_tuner/: __init__.py
src/pyreco/reservoir_tuner/examples/: reservoir_tuning_example.py
src/pyreco/reservoir_tuner/examples/configs/: example_config.yaml
src/pyreco/reservoir_tuner/experiment/: config.py  engine.py  manager.py  tasks.py
src/pyreco/reservoir_tuner/metrics/: aggregator.py  collector.py
src/pyreco/reservoir_tuner/search/: bayesian.py  composite.py  random.py  strategies.py
src/pyreco/reservoir_tuner/tests/: __init__.py  conftest.py  test_end_to_end.py
src/pyreco/reservoir_tuner/tests/experiment/: test_engine.py  test_manager.py
src/pyreco/reservoir_tuner/tests/metrics/: test_aggregator.py  test_collector.py
src/pyreco/reservoir_tuner/tests/search/: __init__.py  test_composite.py  test_random.py  test_strategies.py
src/pyreco/utils/: plotting.py  utils_data.py
tests/: conftest.py  test_NetProps.py  test_analysis.py  test_custom_models.py  test_initializer.py  test_layers.py  test_metrics.py  test_network_prop_extractor.py  test_node_selector.py  test_optimizers.py  test_pruning.py  test_skeleton.py  test_utils.py  test_validation.py
